views when VDISTANCE=True.

Fixed rad so that 'scene' variable may consist only of inline commands.

Fixed bug introduced in shadow caching routines where sources in the
middle of spheres were not illuminating properly.  Thanks to Guilio
Antonutto for spotting this problem.

Modified gensky behavior so if time is given with standard time zone
designation, any -m option is ignored.

Added -n option to mkillum for (shared memory) parallel processing.

Fixed a long-standing bug in parallel processing code that only
seemed to manifest with the new mkillum -n option, where rtrace
would deadlock upon termination.  The reason it never showed up
before is because I always closed processes in the reverse order
of opening them in other programs.  I went through and found similar
(potential) bugs in the rview device subprocess code and util/netproc.c.

Corrected the normalization of the Gaussian reflectance model.  This will
cause an increase in specularity for low-lying light sources.
Thanks to Don Walters of Boeing and Arne Duer of the Univ. of Innsbruck
for pointing out this error.  The square root used for the two cosines
in the denominator of the normalization factor should not be present.
This was a serious mistake I made in the original model, which went
undiscovered (at least to my knowledge) for over a decade.  I think
Bruce Walter of Cornell may have known about it, but I never heard
the details of his discovery.

Enabled the -p option for primary conversion without tone-mapping
in ra_bmp.  Also provides for XYZE input conversion to RGB.

Fixed what I consider a bug in pvalue -o when taking XYZE files on input,
where it was inappropriately undoing the exposure value so that it always
reported radiance rather than XYZ values with Y in cd/m^2.

Made it so ra_bmp only produces run-length encoded 8-bit output for
grayscale images that are tone-mapped.  This minimizes circumstances
under which output scanline order is reversed.